--- a/notes/2025-day10.md
+++ b/notes/2025-day10.md
@@ -1,3 +1,7 @@
+## Part 1
 - Decision graph; each toggle option is a connection to a neighbor node; we want to keep track of minimum distances to each node until we reach the desired configuration
 - Going from the starting (all lights off) configuration to the desired one is the exact same problem as the reverse
 - Rewrite parser with NimbleParsec because currently it's half the code
+
+## Part 2
+- Oh fuck
